--- a/app/src/main/res/layout/activity_mechanics2.xml
+++ b/app/src/main/res/layout/activity_mechanics2.xml
@@ -30,14 +30,16 @@
                 android:background="@drawable/previousbtn"
                 android:layout_marginEnd="183dp"
                 android:layout_marginBottom="90dp"
-                android:onClick="toPrevious"/>
+                android:onClick="toPrevious"
+                android:contentDescription="previous button"/>
             <ImageButton
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="12dp"
                 android:background="@drawable/nextbtn"
                 android:layout_marginBottom="90dp"
-                android:onClick="toNext"/>
+                android:onClick="toNext"
+                android:contentDescription="next button"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -48,7 +50,8 @@
             <ImageButton
                 android:layout_width="150dp"
                 android:layout_height="90dp"
-                android:background="@drawable/playbtn" />
+                android:background="@drawable/playbtn"
+                android:contentDescription="play button"/>
         </LinearLayout>
     </LinearLayout>
 
