Change the size of the items and the selectors

--- a/app/src/main/res/drawable/aboutbtn_selector.xml
+++ b/app/src/main/res/drawable/aboutbtn_selector.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="true">
         <layer-list>
             <item>
-                <bitmap android:src="@drawable/aboutbtn"/>
+                <bitmap android:src="@drawable/button_home_about"/>
             </item>
             <item>
                 <color android:color="#66000000"/>  <!-- Semi-transparent black overlay -->
@@ -12,6 +12,6 @@
     </item>
     <!-- Normal state -->
     <item>
-        <bitmap android:src="@drawable/aboutbtn"/>
+        <bitmap android:src="@drawable/button_home_about"/>
     </item>
 </selector>
