--- a/app/src/main/res/layout/activity_story2.xml
+++ b/app/src/main/res/layout/activity_story2.xml
@@ -5,13 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Story1"
+    tools:context=".Story2"
     android:background="@drawable/story_bg">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/story1"/>
+        android:src="@drawable/story2"/>
 
     <ImageView
         android:id="@+id/skip_button"
@@ -24,12 +24,23 @@
         android:layout_alignParentEnd="true" />
 
     <ImageView
+        android:id="@+id/prev_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/button_mechanics_prev"
+        android:layout_alignParentStart="true"
+        android:onClick="toPrev"
+        android:contentDescription="to previous"
+        android:layout_centerVertical="true"/>
+
+    <ImageView
         android:id="@+id/next_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/button_mechanics_next"
-        android:layout_alignParentEnd="true"
         android:onClick="toNext"
+        android:contentDescription="to next"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"/>
 
 </RelativeLayout>
