--- a/app/src/main/res/layout/activity_mechanics.xml
+++ b/app/src/main/res/layout/activity_mechanics.xml
@@ -19,6 +19,18 @@
             android:src="@drawable/pause_bg"
             android:scaleType="centerCrop"/>
 
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/button_mechanics_ext"
+            android:adjustViewBounds="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:onClick="toStory"
+            android:contentDescription="to story"/>
+
+
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -74,7 +86,7 @@
                         android:layout_weight="0.7">
 
                         <ImageView
-                            android:layout_width="150dp"
+                            android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:adjustViewBounds="true"
                             android:src="@drawable/button_mechanics_play"
