--- a/app/src/main/res/layout/activity_mechanics.xml
+++ b/app/src/main/res/layout/activity_mechanics.xml
@@ -34,8 +34,7 @@
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="30dp">
+                android:layout_height="wrap_content">
                 <ImageView
                     android:id="@+id/ig_mechanics"
                     android:layout_width="match_parent"
