--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
                 android:weightSum="3">
 
                 <ImageView
+                    android:id="@+id/start_button"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="0.7"
@@ -51,6 +52,7 @@
                     android:scaleType="centerInside"/>
 
                 <ImageView
+                    android:id="@+id/about_button"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="0.7"
@@ -59,6 +61,7 @@
                     android:contentDescription="about button" />
 
                 <ImageView
+                    android:id="@+id/exit_button"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="0.7"
