--- a/app/src/main/res/layout/activity_story2.xml
+++ b/app/src/main/res/layout/activity_story2.xml
@@ -17,7 +17,7 @@
         android:id="@+id/skip_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/button_story_skip"
+        android:src="@drawable/selector_skip"
         android:layout_margin="20dp"
         android:onClick="toSkip"
         android:contentDescription="to skip"
@@ -27,7 +27,7 @@
         android:id="@+id/prev_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/button_mechanics_prev"
+        android:src="@drawable/selector_prev"
         android:layout_alignParentStart="true"
         android:onClick="toPrev"
         android:contentDescription="to previous"
@@ -37,7 +37,7 @@
         android:id="@+id/next_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/button_mechanics_next"
+        android:src="@drawable/selector_next"
         android:onClick="toNext"
         android:contentDescription="to next"
         android:layout_alignParentEnd="true"
