--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:weightSum="10">
 
         <ImageView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:src="@drawable/home_title"
@@ -34,6 +35,7 @@
             android:weightSum="4">
 
             <LinearLayout
+                android:layout_marginTop="50dp"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
@@ -72,6 +74,7 @@
             </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/minigame_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:src="@drawable/button_easteregg"
