--- a/app/src/main/res/layout/activity_game_win.xml
+++ b/app/src/main/res/layout/activity_game_win.xml
@@ -20,6 +20,7 @@
         android:weightSum="10">
 
         <RelativeLayout
+            android:id="@+id/sign_winner"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="7"
@@ -64,6 +65,7 @@
             android:gravity="center|top">
 
             <ImageView
+                android:id="@+id/play_again"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/selector_playagain"
@@ -72,6 +74,7 @@
                 android:adjustViewBounds="true"/>
 
             <ImageView
+                android:id="@+id/main_button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/selector_main"
