--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -50,6 +50,7 @@
                 android:weightSum="4">
 
                 <ImageView
+                    android:id="@+id/try_again"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:src="@drawable/selector_tryagain"
@@ -58,6 +59,7 @@
                     android:layout_weight="1"/>
 
                 <ImageView
+                    android:id="@+id/toMain"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:src="@drawable/selector_main"
