--- a/app/src/main/res/layout/activity_card_game.xml
+++ b/app/src/main/res/layout/activity_card_game.xml
@@ -4,9 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/main"
-    android:background="@drawable/bg_cardgame_paper"
-    android:gravity="center"
-    android:weightSum="4">
+    android:background="@drawable/bg_cardgame"
+    android:weightSum="10">
 
     <RelativeLayout
         android:id="@+id/pauseOverlay"
@@ -228,131 +227,139 @@
 
     </RelativeLayout>
 
-
-    <LinearLayout
+    <!--top container-->
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:weightSum="6">
+        android:orientation="horizontal">
 
+
+
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="2"-->
+<!--            android:weightSum="2"-->
+<!--            android:orientation="vertical"-->
+<!--            android:gravity="center|right">-->
+
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:orientation="vertical"-->
+<!--                android:gravity="center"-->
+<!--                android:layout_weight="1">-->
+
+
+
+
+<!--            </LinearLayout>-->
+
+
+
+        <ImageView
+            android:id="@+id/iv_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:adjustViewBounds="true"
+            android:layout_alignParentEnd="true"
+            android:clickable="true"
+            android:contentDescription="to pause"
+            android:src="@drawable/button_pause" />
+
+
+        <!--        </LinearLayout>-->
+    </RelativeLayout>
+
+    <!--card container and other buttons container-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="6"-->
+<!--        android:weightSum="1"-->
+<!--        android:orientation="vertical">-->
+
+
+        <!--card container-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:orientation="vertical"
+        android:weightSum="8">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
             android:weightSum="2"
-            android:orientation="vertical"
-            android:gravity="center|right">
-
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:gravity="right"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_marginRight="40dp"
-                android:layout_marginBottom="24dp">
+                android:gravity="center|bottom">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Time Left: "
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/villagers"
+                    android:textSize="21sp"/>
 
 
                 <TextView
                     android:id="@+id/tv_timer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="42dp"
-                    android:layout_marginRight="19dp"
+                    android:textColor="@color/white"
                     android:fontFamily="@font/villagers"
                     android:text="20 SECS"
                     android:textSize="21sp" />
 
-
             </LinearLayout>
 
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:weightSum="2"
-            android:orientation="vertical"
-            android:gravity="center|right">
-
-
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_weight="1">
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|bottom">
 
-
-                <ImageView
-                    android:id="@+id/iv_pause"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="10dp"
-                    android:clickable="true"
-                    android:src="@drawable/button_pause"
-                    android:contentDescription="to pause"/>
-
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:gravity="right"
-                android:layout_weight="1"
-                android:layout_marginRight="50dp"
-                android:layout_marginBottom="24dp">
-
+                    android:fontFamily="@font/villagers"
+                    android:textColor="@color/white"
+                    android:text="points: "
+                    android:textSize="21sp" />
 
                 <TextView
                     android:id="@+id/tv_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:paddingRight="30dp"
                     android:fontFamily="@font/villagers"
+                    android:textColor="@color/white"
                     android:text="0"
-                    android:textSize="23sp" />
-
+                    android:textSize="21sp" />
 
             </LinearLayout>
 
 
         </LinearLayout>
 
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:weightSum="2"
-        android:orientation="vertical">
-
-
         <LinearLayout
-            android:layout_width="355dp"
-            android:layout_height="450dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:gravity="center"
-            android:layout_weight="1"
-            android:layout_marginLeft="15dp"
+            android:layout_weight="7"
+            android:background="@drawable/paper_cardgame"
             android:orientation="vertical"
             android:weightSum="4">
 
@@ -362,7 +369,6 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
-                android:layout_marginTop="20dp"
                 android:gravity="center">
 
 
@@ -412,7 +418,6 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:orientation="horizontal"
-                android:layout_marginBottom="20dp"
                 android:gravity="center">
 
 
@@ -422,40 +427,84 @@
                 <ImageView android:id="@+id/iv_Card15" android:layout_width="65dp" android:layout_height="80dp" android:layout_marginStart="16dp" android:src="@drawable/card_flipped" />
             </LinearLayout>
 
-
-            <ImageView
-                android:id="@+id/iv_start"
-                android:layout_width="200dp"
-                android:layout_height="60dp"
-                android:clickable="true"
-                android:src="@drawable/button_home_start"
-                android:contentDescription="to start"/>
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:weightSum="1"
-                android:gravity="center">
-
-                <TextView
-                    android:id="@+id/tv_status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/villagers"
-                    android:layout_marginLeft="47dp"
-                    android:layout_marginBottom="1dp"
-                    android:text="0"
-                    android:textSize="23dp"/>
-
             </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
+                android:fontFamily="@font/villagers"
+                android:text="Match Score:"
+                android:textColor="@color/white"
+                android:textSize="23dp" />
+
+            <TextView
+                android:id="@+id/tv_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="1dp"
+                android:fontFamily="@font/villagers"
+                android:text="0"
+                android:textColor="@color/white"
+                android:textSize="23dp" />
 
         </LinearLayout>
 
-
     </LinearLayout>
+
+
+
+<!--            <ImageView-->
+<!--                android:id="@+id/iv_start"-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="60dp"-->
+<!--                android:clickable="true"-->
+<!--                android:src="@drawable/button_home_start"-->
+<!--                android:contentDescription="to start"/>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:orientation="vertical"-->
+<!--                android:weightSum="1"-->
+<!--                android:gravity="center">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_status"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:fontFamily="@font/villagers"-->
+<!--                    android:layout_marginLeft="47dp"-->
+<!--                    android:layout_marginBottom="1dp"-->
+<!--                    android:text="0"-->
+<!--                    android:textSize="23dp"/>-->
+
+<!--            </LinearLayout>-->
+
+<!--    </LinearLayout>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_horizontal">
+        <ImageView
+            android:id="@+id/iv_start"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:adjustViewBounds="true"
+            android:src="@drawable/button_home_start"
+            android:contentDescription="to start"/>
+    </LinearLayout>
+
+
 </LinearLayout>
