--- a/app/src/main/res/layout/activity_card_game.xml
+++ b/app/src/main/res/layout/activity_card_game.xml
@@ -202,9 +202,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="25dp"
         android:weightSum="10"
         android:orientation="vertical"
-        android:background="@drawable/bg_cardgame">
+        android:background="@drawable/bg_cardgame_alt">
 
         <!--card container-->
         <RelativeLayout
@@ -255,7 +256,7 @@
             android:layout_height="0dp"
             android:layout_weight="8"
             android:orientation="vertical"
-            android:background="@drawable/paper_cardgame"
+
             android:weightSum="8">
 
             <LinearLayout
@@ -275,7 +276,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Time Left: "
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/villagers"
                         android:textSize="21sp"/>
 
@@ -284,7 +285,7 @@
                         android:id="@+id/tv_timer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/villagers"
                         android:text="20 SECS"
                         android:textSize="21sp" />
@@ -301,7 +302,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/villagers"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:text="points: "
                         android:textSize="21sp" />
 
@@ -310,7 +311,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/villagers"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:text="0"
                         android:textSize="21sp" />
 
@@ -406,7 +407,7 @@
                     android:layout_marginBottom="1dp"
                     android:fontFamily="@font/villagers"
                     android:text="Match Score:"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="23dp" />
 
                 <TextView
@@ -417,7 +418,7 @@
                     android:layout_marginBottom="1dp"
                     android:fontFamily="@font/villagers"
                     android:text="0"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="23dp" />
 
             </LinearLayout>
