--- a/app/src/main/res/layout/activity_story1.xml
+++ b/app/src/main/res/layout/activity_story1.xml
@@ -11,7 +11,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/story1"/>
+        android:layout_margin="10dp"
+        android:src="@drawable/story_page1"/>
 
     <ImageView
         android:id="@+id/skip_button"
