--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -18,21 +18,43 @@
         android:weightSum="10"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:src="@drawable/sign_about"
-            android:layout_weight="8.5"
-            android:layout_marginTop="20dp"/>
+            android:layout_weight="8">
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/selector_backtomain"
-            android:onClick="toMain"
-            android:layout_gravity="center_horizontal"
-            android:contentDescription="to main"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/sign_about" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/selector_people"
+                android:layout_gravity="center_horizontal"
+                android:onClick="toPeople"
+                android:contentDescription="to people"/>
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/selector_backtomain"
+                android:onClick="toMain"
+                android:layout_gravity="center_horizontal"
+                android:contentDescription="to main"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
