--- a/app/src/main/res/layout/activity_story3.xml
+++ b/app/src/main/res/layout/activity_story3.xml
@@ -11,6 +11,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:src="@drawable/story_page3"/>
 
     <ImageView
