--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -12,50 +12,37 @@
         android:src="@drawable/bg_about"
         android:scaleType="centerCrop"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="10"
-        android:orientation="vertical">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/sign_about"
+        android:layout_marginBottom="30dp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8">
+    <ImageView
+        android:layout_width="125dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/selector_ourteam"
+        android:layout_gravity="center_horizontal"
+        android:onClick="toPeople"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="150dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginRight="10dp"
+        android:contentDescription="to people"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/sign_about" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/selector_people"
-                android:layout_gravity="center_horizontal"
-                android:onClick="toPeople"
-                android:contentDescription="to people"/>
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@drawable/selector_backtomain"
-                android:onClick="toMain"
-                android:layout_gravity="center_horizontal"
-                android:contentDescription="to main"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
+    <ImageView
+        android:layout_width="125dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:adjustViewBounds="true"
+        android:contentDescription="to main"
+        android:onClick="toMain"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="150dp"
+        android:layout_marginRight="75dp"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/selector_backtomain" />
 
 </RelativeLayout>
