Make the project 99% done

--- a/app/src/main/res/layout/activity_our_team.xml
+++ b/app/src/main/res/layout/activity_our_team.xml
@@ -40,11 +40,9 @@
             android:layout_weight="7">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/heads_list"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
                 android:layout_marginBottom="50dp"/>
 
             <ImageView
@@ -55,7 +53,6 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginBottom="20dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="to previous"
                 android:onClick="toNext"
@@ -69,8 +66,7 @@
                 android:contentDescription="to previous"
                 android:adjustViewBounds="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginLeft="15dp"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginLeft="15dp" />
 
 
 
