--- a/app/src/main/res/layout/activity_our_team3.xml
+++ b/app/src/main/res/layout/activity_our_team3.xml
@@ -43,8 +43,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/committees_list_2"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
                 android:layout_marginBottom="50dp"/>
 
             <ImageView
@@ -57,8 +55,7 @@
                 android:contentDescription="to previous"
                 android:layout_marginRight="15dp"
                 android:layout_marginLeft="5dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="20dp"/>
+                android:layout_alignParentBottom="true" />
 
             <ImageView
                 android:layout_width="50dp"
@@ -68,8 +65,7 @@
                 android:contentDescription="to previous"
                 android:adjustViewBounds="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginLeft="15dp"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginLeft="15dp" />
 
             <ImageView
                 android:layout_width="150dp"
@@ -80,7 +76,6 @@
                 android:onClick="toMain"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
                 android:src="@drawable/selector_backtomain" />
 
 
