--- a/app/src/main/res/layout/activity_story4.xml
+++ b/app/src/main/res/layout/activity_story4.xml
@@ -32,5 +32,14 @@
         android:onClick="toCardGame"
         android:contentDescription="to mechanics"
         android:layout_alignParentBottom="true"/>
+    <ImageView
+        android:id="@+id/main_button"
+        android:layout_width="138dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/selector_backtomain"
+        android:layout_margin="12dp"
+        android:onClick="toMain"
+        android:contentDescription="to main" />
 
 </RelativeLayout>
