--- a/app/src/main/res/layout/activity_card_game.xml
+++ b/app/src/main/res/layout/activity_card_game.xml
@@ -302,7 +302,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="bottom"
             android:orientation="vertical"
             android:weightSum="10">
 
@@ -310,7 +310,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="7"
+                android:layout_weight="6"
                 android:orientation="vertical"
                 android:gravity="center|bottom"
                 android:background="@drawable/sign_winner">
