--- a/app/src/main/res/layout/activity_game_win.xml
+++ b/app/src/main/res/layout/activity_game_win.xml
@@ -17,43 +17,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:gravity="bottom"
         android:weightSum="10">
 
         <RelativeLayout
             android:id="@+id/sign_winner"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="7"
+            android:layout_weight="6.5"
             android:gravity="center">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/sign_winner" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="@drawable/sign_winner"
+                android:gravity="bottom|center_horizontal">
 
-            <TextView
-                android:id="@+id/score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="95dp"
-                android:fontFamily="@font/sigher"
-                android:textColor="@color/black"
-                android:text="0"
-                android:textSize="90dp" />
+                <TextView
+                    android:id="@+id/score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/sigher"
+                    android:textColor="@color/black"
+                    android:text="0"
+                    android:textSize="90dp" />
 
-            <TextView
-                android:id="@+id/highScore"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="50dp"
-                android:fontFamily="@font/sigher"
-                android:textColor="@color/black"
-                android:text="0"
-                android:textSize="30dp" />
+                <TextView
+                    android:id="@+id/highScore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="30dp"
+                    android:fontFamily="@font/sigher"
+                    android:textColor="@color/black"
+                    android:text="0"
+                    android:textSize="30dp" />
+
+            </LinearLayout>
 
         </RelativeLayout>
 
