--- a/app/src/main/res/layout/activity_mechanics.xml
+++ b/app/src/main/res/layout/activity_mechanics.xml
@@ -19,16 +19,29 @@
             android:src="@drawable/pause_bg"
             android:scaleType="centerCrop"/>
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/selector_mech_exit"
-            android:adjustViewBounds="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:onClick="toStory"
-            android:contentDescription="to story"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="10"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1.4">
+                <ImageView
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/selector_mech_exit"
+                    android:onClick="toStory"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="20dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="to story"/>
+            </RelativeLayout>
+
+        </LinearLayout>
 
 
 
