--- a/app/src/main/res/layout/activity_story4.xml
+++ b/app/src/main/res/layout/activity_story4.xml
@@ -8,11 +8,43 @@
     tools:context=".Story4"
     android:background="@drawable/story_bg">
 
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:src="@drawable/story_page4"/>
+        android:orientation="vertical"
+        android:weightSum="10">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.3">
+
+            <ImageView
+                android:id="@+id/main_button"
+                android:layout_width="138dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/selector_backtomain"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="30dp"
+                android:adjustViewBounds="true"
+                android:onClick="toMain"
+                android:contentDescription="to main" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/story_page4" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
     <!--    <ImageView-->
@@ -25,21 +57,14 @@
     <!--        android:layout_centerVertical="true"/>-->
 
     <ImageView
-        android:layout_width="150dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/selector_play"
-        android:layout_alignParentEnd="true"
-        android:onClick="toCardGame"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:contentDescription="to mechanics"
-        android:layout_alignParentBottom="true"/>
-    <ImageView
-        android:id="@+id/main_button"
-        android:layout_width="138dp"
-        android:layout_height="wrap_content"
+        android:onClick="toCardGame"
         android:adjustViewBounds="true"
-        android:src="@drawable/selector_backtomain"
-        android:layout_margin="12dp"
-        android:onClick="toMain"
-        android:contentDescription="to main" />
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/selector_play" />
 
 </RelativeLayout>
